# yt-bar

./: .gitignore  AGENTS.md  PLAN.md  README.md  handoff.md  install.sh  main.py  package-refactor-plan.md  pyproject.toml  todo.md  uninstall.sh  yt_bar.py
tests/: test_app.py  test_av_session.py  test_cache.py  test_decoder.py  test_formatting.py  test_local_media.py  test_menu.py  test_models.py  test_objc_bridges.py  test_playback.py  test_recent.py  test_remote_commands.py  test_resolver.py  test_smoke.py  test_storage.py  test_visualizer.py
yt_bar/: __init__.py  app.py  audio_engine.py  av_session.py  cache.py  constants.py  core_audio.py  decoder.py  local_media.py  media_player.py  menu.py  models.py  objc_bridges.py  playback.py  recent.py  remote_commands.py  resolver.py  storage.py  utils.py  visualizer.py
